# data_inconsistency

./: .gitignore  README.md  create_db.sh  notebook.ipynb  pyproject.toml
