[project]
name = "property_business_analysis"
version = "0.1.0"
description = "Educational systems analysis"
authors = [
    {name = "Nicolas Audheon",email = "audheon.nicolas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5)", 
    "jupyterlab (>=4.3.6,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
